--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,111 @@
+altair==4.2.2
+aniso8601==9.0.1
+arrow==1.2.3
 asgiref==3.6.0
 attrs==22.2.0
+Babel==2.11.0
+backcall==0.2.0
+beautifulsoup4==4.11.2
+blinker==1.5
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
+colour==0.1.5
+contourpy==1.0.7
 coverage==7.1.0
+cycler==0.11.0
+decorator==5.1.1
 Django==4.1.7
+django-bootstrap-v5==1.0.11
+dnspython==2.3.0
+docopt==0.6.2
+email-validator==1.3.1
+entrypoints==0.4
+executing==1.2.0
+filelock==3.9.0
 Flask==2.2.3
+Flask-Admin==1.6.1
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.2
+Flask-Minify==0.41
+Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.3
+fonttools==4.38.0
+gazpacho==1.1
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==2.0.2
+htmlmin==0.1.12
+huggingface-hub==0.12.1
+idna==3.4
+importlib-metadata==6.0.0
 iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+jsmin==3.0.1
+jsonschema==4.17.3
+kiwisolver==1.4.4
+lesscpy==0.15.1
+markdown-it-py==2.1.0
 MarkupSafe==2.1.2
+matplotlib==3.7.0
+mdurl==0.1.2
+numpy==1.24.2
 packaging==23.0
+pandas==1.5.3
+pickleshare==0.7.5
+Pillow==9.4.0
+pipreqs==0.4.11
 pluggy==1.0.0
+ply==3.11
+protobuf==3.20.3
+pure-eval==0.2.2
+pyarrow==11.0.0
+pycparser==2.21
+pydeck==0.8.0
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.0.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305
+PyYAML==6.0
+rcssmin==1.1.1
+regex==2022.10.31
+requests==2.28.2
+rich==13.3.1
+seaborn==0.12.2
+semver==2.13.0
+six==1.16.0
+smmap==5.0.0
+soupsieve==2.4
+speaklater==1.3
+SQLAlchemy==2.0.4
+SQLAlchemy-Utils==0.40.0
 sqlparse==0.4.3
+streamlit==1.18.1
+tablib==3.3.0
+tokenizers==0.13.2
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.9.0
+transformers==4.26.1
+typing_extensions==4.5.0
 tzdata==2022.7
+tzlocal==4.2
+urllib3==1.26.14
+validators==0.20.0
+watchdog==2.2.1
+wcwidth==0.2.6
 Werkzeug==2.2.3
+WTForms==3.0.1
+xxhash==3.2.0
+yarg==0.1.9
+zipp==3.14.0
