--- a/requirements.txt
+++ b/requirements.txt
@@ -73,7 +73,7 @@ pyrsistent==0.19.3
 python-dateutil==2.8.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
-pywin32==305
+pypiwin32==223
 PyYAML==6.0
 rcssmin==1.1.1
 regex==2022.10.31
