--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ Flask-BabelEx==0.9.4
 Flask-Login==0.6.2
 Flask-Minify==0.41
 Flask-RESTful==0.3.9
+Flask-Sitemap==0.4.0
 Flask-SQLAlchemy==3.0.3
 fonttools==4.38.0
 gazpacho==1.1
