--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@microsoft/applicationinsights-web": "^2.8.10",
     "@microsoft/applicationinsights-web-basic": "^2.8.10",
     "workbox-webpack-plugin": "^6.5.4"
+  },
+  "devDependencies": {
+    "netlify-cli": "^13.0.0"
   }
 }
