--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,46 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 altair==4.2.2
 aniso8601==9.0.1
+anyascii==0.3.1
 arrow==1.2.3
 asgiref==3.6.0
+async-timeout==4.0.2
 attrs==22.2.0
 Babel==2.11.0
 backcall==0.2.0
 beautifulsoup4==4.11.2
 blinker==1.5
+boto==2.49.0
 cachetools==5.3.0
+Cactus==3.3.3
 certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==3.0.1
 click==8.1.3
 colorama==0.4.6
+colorlog==6.7.0
 colour==0.1.5
 contourpy==1.0.7
 coverage==7.1.0
 cycler==0.11.0
 decorator==5.1.1
+distlib==0.3.6
 Django==4.1.7
 django-bootstrap-v5==1.0.11
+django-filter==22.1
+django-markwhat==1.6.2
+django-modelcluster==6.0
+django-permissionedforms==0.1
+django-taggit==3.1.0
+django-treebeard==4.6.1
+djangorestframework==3.14.0
 dnspython==2.3.0
 docopt==0.6.2
+draftjs-exporter==2.1.7
 email-validator==1.3.1
 entrypoints==0.4
+et-xmlfile==1.1.0
 executing==1.2.0
 filelock==3.9.0
 Flask==2.2.3
@@ -35,10 +52,13 @@ Flask-RESTful==0.3.9
 Flask-Sitemap==0.4.0
 Flask-SQLAlchemy==3.0.3
 fonttools==4.38.0
+Frozen-Flask==0.18
+frozenlist==1.3.3
 gazpacho==1.1
 gitdb==4.0.10
 GitPython==3.1.31
 greenlet==2.0.2
+html5lib==1.1
 htmlmin==0.1.12
 huggingface-hub==0.12.1
 idna==3.4
@@ -48,18 +68,25 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 jsmin==3.0.1
 jsonschema==4.17.3
+keyring==5.7.1
 kiwisolver==1.4.4
+l18n==2021.3
 lesscpy==0.15.1
 markdown-it-py==2.1.0
+markdown2==2.4.8
 MarkupSafe==2.1.2
 matplotlib==3.7.0
 mdurl==0.1.2
+multidict==6.0.4
 numpy==1.24.2
+openai==0.27.0
+openpyxl==3.1.1
 packaging==23.0
 pandas==1.5.3
 pickleshare==0.7.5
 Pillow==9.4.0
 pipreqs==0.4.11
+platformdirs==3.0.0
 pluggy==1.0.0
 ply==3.11
 protobuf==3.20.3
@@ -72,8 +99,10 @@ Pympler==1.0.1
 pyparsing==3.0.9
 pyrsistent==0.19.3
 python-dateutil==2.8.2
+python-dotenv==1.0.0
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
+pywin32==305
 PyYAML==6.0
 rcssmin==1.1.1
 regex==2022.10.31
@@ -90,6 +119,7 @@ SQLAlchemy-Utils==0.40.0
 sqlparse==0.4.3
 streamlit==1.18.1
 tablib==3.3.0
+telepath==0.3
 tokenizers==0.13.2
 toml==0.10.2
 toolz==0.12.0
@@ -102,10 +132,15 @@ tzdata==2022.7
 tzlocal==4.2
 urllib3==1.26.14
 validators==0.20.0
+virtualenv==20.20.0
+wagtail==4.2
 watchdog==2.2.1
 wcwidth==0.2.6
+webencodings==0.5.1
 Werkzeug==2.2.3
+Willow==1.4.1
 WTForms==3.0.1
 xxhash==3.2.0
 yarg==0.1.9
+yarl==1.8.2
 zipp==3.14.0
